--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,13 @@
   justify-content: center;
 }
 
+.ButtonRow{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  
+}
 .form input {
   width: 300px;
   height: 60px;
